--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sachithmayantha.github.io/COVID-19",
+  "homepage": "https://sachithmayantha.github.io/covid19",
   "name": "covid19",
   "version": "0.1.0",
   "private": true,
